[gd_scene load_steps=2 format=3 uid="uid://dc2cs7rd6mjv8"]

[ext_resource type="Script" path="res://addons/adaptive-audio/AudioTrackUI/LayerTrackUI/LayerTrackUI.gd" id="1"]

[node name="LayerTrackUI" type="Control"]
custom_minimum_size = Vector2(340, 340)
layout_mode = 3
anchors_preset = 0
offset_right = 220.0
offset_bottom = 250.0
size_flags_horizontal = 4
size_flags_vertical = 0
script = ExtResource("1")

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
tabs_visible = false

[node name="Content" type="VBoxContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -6.0
offset_bottom = -4.0

[node name="Title" type="Label" parent="Content"]
layout_mode = 2
text = "Layer0"

[node name="LayerName" type="LineEdit" parent="Content"]
layout_mode = 2
text = "Layer0"
placeholder_text = "Name"
editable = false
context_menu_enabled = false
virtual_keyboard_enabled = false
caret_blink = true
caret_blink_interval = 0.5

[node name="FadeTimeLabel" type="Label" parent="Content"]
layout_mode = 2
text = "Fade time:"

[node name="FadeTime" type="HBoxContainer" parent="Content"]
layout_mode = 2

[node name="SpinBox" type="SpinBox" parent="Content/FadeTime"]
layout_mode = 2
min_value = 0.01
max_value = 10.0
step = 0.01
value = 2.0

[node name="HSlider" type="HSlider" parent="Content/FadeTime"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.01
max_value = 10.0
step = 0.01
value = 2.0

[node name="FileButtons" type="VBoxContainer" parent="Content"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="Content/FileButtons"]
layout_mode = 2
size_flags_vertical = 3
text = "Drop audio file here..."

[node name="Select" type="Button" parent="Content/FileButtons"]
layout_mode = 2
size_flags_horizontal = 4
text = "Select audio file"

[node name="VSplitContainer" type="VSplitContainer" parent="Content"]
layout_mode = 2

[node name="LayerButtons" type="VBoxContainer" parent="Content"]
layout_mode = 2

[node name="Set" type="Button" parent="Content/LayerButtons"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
text = "Update"

[node name="Transition" type="Button" parent="Content/LayerButtons"]
layout_mode = 2
size_flags_horizontal = 4
text = "Transition"

[node name="Blend" type="Button" parent="Content/LayerButtons"]
layout_mode = 2
size_flags_horizontal = 4
text = "Blend"

[node name="RemoveLayer" type="Button" parent="Content/LayerButtons"]
layout_mode = 2
size_flags_horizontal = 4
text = "Remove Layer"

[node name="VSplitContainer2" type="VSplitContainer" parent="Content"]
layout_mode = 2

[node name="FileDialog" type="FileDialog" parent="."]
filters = PackedStringArray("*.ogg", "*.wav", "*.mp3")
show_hidden_files = true
